Tres barriles y escaleras
Cambiados los colores del stage.
Tres barriles.
Mario puede subir escaleras.
*No probado nada de esto*
Falta: -Aleatoriedad de aparición de barriles
-Carga de imágenes por memoria

--- a/juego.ucf
+++ b/juego.ucf
@@ -3,7 +3,11 @@ NET "reset" LOC = "G12";
 NET "jump" LOC = "C11";
 NET "left" LOC = "A7";
 NET "right"  LOC = "M4";
-NET "aparece"  LOC = "N3";
+NET "up" LOC = "P11";
+NET "down" LOC = "L3";
+NET "aparece<2>"  LOC = "N3";
+NET "aparece<1>"  LOC = "E2";
+NET "aparece<0>"  LOC = "F3";
 NET "VS" LOC = "K13";  
 NET "HS" LOC = "J14";  
 NET "RGBout<7>" LOC = "F13";  
