--- a/juego.ucf
+++ b/juego.ucf
@@ -1,13 +1,11 @@
-NET "clk" LOC = "B8";
-NET "reset" LOC = "G12";
+#NET "clk" LOC = "B8";
+NET "clk" LOC = "M6";
+NET "reset" LOC = "N3";
 NET "jump" LOC = "C11";
 NET "left" LOC = "A7";
 NET "right"  LOC = "M4";
-NET "up" LOC = "P11";
-NET "down" LOC = "L3";
-NET "aparece<2>"  LOC = "N3";
-NET "aparece<1>"  LOC = "E2";
-NET "aparece<0>"  LOC = "F3";
+NET "up" LOC = "G12";
+NET "down" LOC = "P11";
 NET "VS" LOC = "K13";  
 NET "HS" LOC = "J14";  
 NET "RGBout<7>" LOC = "F13";  
